# Rust-URL-Shortening

./: Cargo.toml  README.md  db.rs  main.rs  models.rs  routes.rs  schema.rs
migrations/20230310123456_create_urls/: up.sql
